# DeclarativeUI-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  main.cpp
examples/: CMakeLists.txt  basic_demo.hpp  main_imgui.cpp  main_qt.cpp  main_wx.cpp
frameworks_core/: CMakeLists.txt  ControlWrapper.hpp  ControlWrappers.cpp  ControlWrappers.hpp  DialogWrapper.cpp  GeneralTypes.hpp  GroupBoxWrapper.cpp  GroupBoxWrapper.hpp  ImGuiWidgetIdManager.hpp  LayoutFlags.cpp  LayoutFlags.hpp  LayoutWrapper.cpp  LayoutWrapper.hpp  MessageBoxWrapper.cpp  MessageBoxWrapper.hpp  TabPanelWrapper.cpp  TabPanelWrapper.hpp
frameworks_core/CoreTypes/: Concepts.hpp  GeneralTypes.hpp
frameworks_core/imgui/: ControlWrapper.cpp  ControlWrappers.cpp  DialogWrapper.cpp  GroupBoxWrapper.cpp  LayoutFlags.cpp  LayoutWrapper.cpp  MessageBoxWrapper.cpp  TabPanelWrapper.cpp
frameworks_core/qt/: ControlWrapper.cpp  ControlWrappers.cpp  DialogWrapper.cpp  GroupBoxWrapper.cpp  LayoutFlags.cpp  LayoutWrapper.cpp  MessageBoxWrapper.cpp  TabPanelWrapper.cpp
frameworks_core/wx/: ControlWrapper.cpp  ControlWrappers.cpp  DialogWrapper.cpp  GroupBoxWrapper.cpp  LayoutFlags.cpp  LayoutWrapper.cpp  MessageBoxWrapper.cpp  TabPanelWrapper.cpp
include/: create_and_add.hpp  declarative_ui.hpp  dialog.hpp  fittable_layout.hpp  groupboxes.hpp  messagebox.hpp  sizers.hpp  stacks.hpp  tabpanel.hpp  widgets.hpp
include/frameworks_core/: Concepts.hpp  ControlWrapper.hpp  ControlWrappers.hpp  DialogWrapper.hpp  GeneralTypes.hpp  GroupBoxWrapper.hpp  LayoutFlags.hpp  LayoutWrapper.hpp
logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/frameworks_core/: ControlWrapper.cpp  ControlWrappers.cpp  DialogWrapper.cpp  GroupBoxWrapper.cpp  LayoutFlags.cpp  LayoutWrapper.cpp
